--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -12,7 +12,9 @@ html { overflow-y: scroll; }
 {% for image in site.static_files %}
   {% if image.path contains include.gallery_path %}
     {% unless image.path contains '.md' %}
-        <img src="{{ image.path | relative_url }}" alt="" class="grid-item" style="padding: 0;">
+        <a href="" onclick="window.open('{{ image.path | relative_url }}','targetWindow', 'toolbar=no, location=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1090px, height=550px, top=25px left=120px'); return false;"> 
+          <img src="{{ image.path | relative_url }}" alt="" class="grid-item" style="padding: 0;">
+        </a>
     {% endunless %}
   {% endif %}
 {% endfor %}
