--- a/_includes/blog/blog_nav.liquid
+++ b/_includes/blog/blog_nav.liquid
@@ -4,7 +4,7 @@
         
         {% if paginator.previous_page and paginator.previous_page != 1%}
         <!-- << -->
-        <a aria-label="{{ site.data.language.str_previous_page | default: 'Prev' }}" href="{{ '/' | relative_url }}" class="button">
+        <a aria-label="{{ site.data.language.str_previous_page | default: 'Prev' }}" href="{{ site.paginate_path | relative_url | replace: ':num', 1 }}" class="button">
             <span><i class="fas fa-angle-double-left"></i></span>
         </a>
         {% endif %}
