--- a/_includes/default/navbar.liquid
+++ b/_includes/default/navbar.liquid
@@ -2,14 +2,14 @@
 
     <!-- Logo and title -->
 	<div class="branding">
-        {% if site.avatar %}
+        <!-- {% if site.avatar %}
 		<a href="{{ '/' | relative_url }}">
 			<img alt="logo img" class="avatar" src="{{ site.avatar | relative_url }}" />
 		</a>
-        {% endif %}
+        {% endif %} 
         <a class="site-title" aria-label="{{ site.title }}" href="{{ '/' | relative_url }}">
         {{ site.title }}
-		</a>
+		</a>  -->
 	</div>
 
     <!-- Toggle menu -->
