--- a/_sass/layouts/_page.scss
+++ b/_sass/layouts/_page.scss
@@ -5,6 +5,8 @@
 h1.title {
   @extend .subtle-txt-shadow;
   padding: 0.5em 0;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
 }
 
 
